add temp logic
