# app/swagger/create-energy-usage-handler.yml
@@ -16,6 +16,8 @@ parameters:
     - average_monthly_bill
     - average_natural_gas_bill
     - monthly_fuel_bill
+    - city
+    - company_name
     properties:
       user_uuid:
         type: string
@@ -33,6 +35,13 @@ parameters:
         type: number
         format: float
         description: The monthly fuel bill for the user, in dollars. This field accepts decimal values to accurately represent the cost.
+      city:
+        type: string
+        description: City
+      company_name:
+        type: string
+        description: Company name
+
 responses:
   "201":
     description: Successful operation
